# twordle

./: Cargo.toml  index.html  styles-618881c4d39b3cb4.css  tailwind.config.js  tailwind.css  twordle-11d211cb8e6d7979.js  twordle-11d211cb8e6d7979_bg.wasm  twordle-8b102c52d3562867.js  twordle-8b102c52d3562867_bg.wasm  twordle-960bdd3095e86da7.js  twordle-960bdd3095e86da7_bg.wasm  twordle-accf548c0c225ed1.js  twordle-accf548c0c225ed1_bg.wasm
.github/workflows/: rust.yml
src/: app.rs  main.rs  pick_word.rs  twordle_list.txt
