[package]
name = "twordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
getrandom = { version = "0.2.10", features = ["js"] }
gloo-console = "0.2.3"
gloo-events = "0.1.2"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
